# rustc-internal-bug-nightly-2022-09-30-cargo-doc

./: Cargo.toml  README.md  rust-toolchain.toml
