[package]
name = "rustc-internal-bug-nightly-2022-09-30-cargo-doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clearscreen = "1.0.10"
rand = "0.8.5"
tempfile = "3.3.0"

[dependencies.clap]
version = "4.0.7"
features = [
  "derive",
]
